packages/jsii/test/negatives/neg.static-prop-name.2.ts
export class MyClass {
  static get PROP() {
    return 123;
  }
}
